# cargo-publish-example

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  README_FAIL.md  commit.py  dev.py  lib-example.md  test.md  watch.py
src/: lib.rs
src/enum/: private.rs  public.rs
src/struct/: private.rs  public.rs
tests/: macrotest.rs  mod.rs  private_enum.rs  private_struct.rs  public_enum.rs  public_struct.rs  readme.rs
tests/expand/: private_enum.expanded.rs  private_enum.rs  private_struct.expanded.rs  private_struct.rs  public_enum.expanded.rs  public_enum.rs  public_struct.rs  public_struct_private_field.expanded.rs  public_struct_private_field.rs  public_struct_public_and_private_fields.expanded.rs  public_struct_public_and_private_fields.rs  public_struct_public_field.expanded.rs  public_struct_public_fields.expanded.rs  public_struct_public_fields.rs
tests/fail/: private_enum.rs  private_struct.rs  public_enum.rs  public_struct.rs
tests/pass/: mod.rs  private_enum.rs  private_struct.rs  public_enum.rs  public_struct.rs
