[package]
name = "publish"
version = "0.0.0"
authors = ["Steadylearner(www.steadylearner.com) <use@real.email>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Reuse fields in Struct and Enum with functional macros."
repository = "https://github.com/steadylearner/publish"
documentation = "https://docs.rs/publish"
categories = ["rust-macros", "rust-patterns", "struct", "enum"]
readme = "README.md"

[dev-dependencies]
